# cipherpost

./: .gitignore  .lycheeignore  CLAUDE.md  Cargo.toml  FAQ.md  README.md  RELEASE-CHECKLIST-v1.1.md  RELEASE-CHECKLIST.md  RELEASE-EVIDENCE-v1.1.0.md  SECURITY.md  SPEC.md  THREAT-MODEL.md  build.rs  cipherpost-prd.md  deny.toml
.config/: nextest.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release-acceptance.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  security-disclosure-test.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/milestones/v1.0-phases/01-foundation-scaffold-vendored-primitives-and-transport-seam/: 01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-DISCUSSION-LOG.md
.planning/milestones/v1.0-phases/02-send-receive-and-explicit-acceptance/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-HUMAN-UAT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/milestones/v1.0-phases/03-signed-receipt-the-cipherpost-delta/: 03-01-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-CONTEXT.md  03-HUMAN-UAT.md  03-RESEARCH.md  03-REVIEW.md  03-SECURITY.md  03-VERIFICATION.md
.planning/phases/01-foundation-scaffold-vendored-primitives-and-transport-seam/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-HUMAN-UAT.md  01-VERIFICATION.md
.planning/phases/02-send-receive-and-explicit-acceptance/: 02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-HUMAN-UAT.md  02-PATTERNS.md  02-RESEARCH.md  deferred-items.md
.planning/phases/03-signed-receipt-the-cipherpost-delta/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-PATTERNS.md  03-REVIEW-FIX.md  03-REVIEW.md  03-VERIFICATION.md
.planning/phases/04-protocol-documentation-drafts/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-04-PLAN.md  04-05-PLAN.md  04-05-SUMMARY.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md
.planning/phases/05-non-interactive-automation-e2e/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-VERIFICATION.md
.planning/phases/06-typed-material-x509cert/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-PATTERNS.md  06-RESEARCH.md  06-REVIEW-FIX.md  06-REVIEW.md  06-VERIFICATION.md
.planning/phases/07-typed-material-pgpkey-sshkey/: 07-01-PLAN.md  07-01-SUMMARY.md  07-01-ed25519-dalek-tree.txt  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-05-ed25519-dalek-tree.txt  07-06-PLAN.md  07-06-SUMMARY.md  07-07-PLAN.md  07-07-SUMMARY.md  07-08-PLAN.md  07-08-SUMMARY.md  07-CHECK.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-PATTERNS.md  07-RESEARCH.md  07-REVIEW.md  07-VERIFICATION.md  deferred-items.md
.planning/phases/08-pin-and-burn-encryption-modes/: 08-01-PLAN.md  08-01-SUMMARY.md  08-01-pin-deps-tree.txt  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-04-PLAN.md  08-04-SUMMARY.md  08-05-PLAN.md  08-05-SUMMARY.md  08-06-PLAN.md  08-06-SUMMARY.md  08-CONTEXT.md  08-DISCUSSION-LOG.md  08-PATTERNS.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/phases/09-real-dht-e2e-cas-merge-update-race-gate/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md  09-DISCUSSION-LOG.md  09-PATTERNS.md  09-RESEARCH.md  09-REVIEW.md  09-VERIFICATION.md  deferred-items.md
.planning/quick/260427-axn-introduce-a-process-level-lock-or-move-c/: 260427-axn-PLAN.md  260427-axn-SUMMARY.md
.planning/quick/260427-bz3-update-the-readme-remove-the-text-block-/: 260427-bz3-PLAN.md  260427-bz3-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
decoy/: README.md  crypto_legacy.rs  dht_buffer.rs
examples/: generate_pgp_fixture.rs
scripts/: setup-hooks.sh
src/: cli.rs  crypto.rs  error.rs  flow.rs  identity.rs  lib.rs  main.rs  payload.rs  pin.rs  preview.rs  receipt.rs  record.rs  transport.rs
src/payload/: ingest.rs  mod.rs
tests/: burn_roundtrip.rs  burn_send_smoke.rs  cas_racer.rs  chacha20poly1305_direct_usage_ban.rs  crypto_ed25519_x25519_fixture.rs  crypto_jcs_determinism.rs  crypto_no_floats_in_signable.rs  debug_leak_scan.rs  dht_label_constants.rs  envelope_burn_signable.rs  hkdf_info_enumeration.rs  identity_passphrase_argv_rejected.rs  identity_perms_0600.rs  identity_phc_header.rs  material_pgp_envelope_round_trip.rs  material_pgp_ingest.rs  material_ssh_envelope_round_trip.rs  material_ssh_ingest.rs  material_x509_envelope_round_trip.rs  material_x509_ingest.rs  mock_transport_roundtrip.rs  outer_record_canonical_form.rs  outer_record_pin_required_signable.rs  pass09_scripted_roundtrip.rs  passphrase_fd_borrowed.rs  passphrase_strip_rule.rs  pgp_banner_render.rs  pgp_error_oracle.rs  pgp_roundtrip.rs  phase2_cli_declined_exit_7.rs  phase2_cli_help_examples.rs  phase2_cli_not_tty_aborts.rs  phase2_cli_stderr_no_secrets.rs  phase2_cli_version_git_sha.rs  phase2_envelope_round_trip.rs  phase2_expired_share.rs  phase2_idempotent_re_receive.rs  phase2_material_variants_unimplemented.rs  phase2_self_round_trip.rs  phase2_share_round_trip.rs  (+29 more)
tests/fixtures/: ed25519_x25519_vectors.json  material_pgp_fixture.pgp  material_pgp_fixture.reproduction.txt  material_pgp_fixture_realistic.pgp  material_pgp_secret_fixture.pgp  material_ssh_fixture.openssh-v1  material_ssh_fixture.reproduction.txt  material_ssh_fixture_rsa1024.openssh-v1  x509_cert_fixture.der  x509_cert_fixture.reproduction.txt
(+6 files in other folders)
