[package]
name = "cipherpost"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Self-sovereign, serverless, accountless CLI for cryptographic-material handoff over Mainline DHT via PKARR."
repository = "https://github.com/johnzilla/cipherpost"
rust-version = "1.88"

[lib]
name = "cipherpost"
path = "src/lib.rs"

[[bin]]
name = "cipherpost"
path = "src/main.rs"

[features]
mock = []

[dependencies]
# DHT transport — no_relays + dht feature only; inherits ed25519-dalek 3.x pre-release
pkarr = { version = "5.0.3", default-features = false, features = ["dht"] }
# HARD PIN: pkarr 5.0.3 depends on ^3.0.0-pre.1 and cargo won't auto-pick newer pre-releases without =.
# Do NOT change until pkarr publishes on a stable ed25519-dalek 3.x.
ed25519-dalek = "=3.0.0-pre.5"
age = "0.11"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
secrecy = "0.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
thiserror = "2"
base64 = "0.22"
bech32 = "0.9"
dirs = "5"
dialoguer = "0.12"
serde = { version = "1", features = ["derive"] }
# NOTE: no extra serde_json features — key-ordering features break canonical-JSON invariants.
serde_json = "1"
serde_canonical_json = "1"
rand = "0.8"
# Local-time rendering on the acceptance screen (D-ACCEPT-02 / RECV-04).
# `clock` feature pulls in `iana-time-zone` for local-offset lookup. std alone
# has no stable tz-aware local-time API.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Phase 6: X.509 DER/PEM parsing. `verify` feature STAYS OFF — would pull `ring`
# which is on the supply-chain rejected list (see .planning/research/SUMMARY.md
# §Phase 6). `default-features = false` is belt-and-suspenders: 0.16 has
# `default = []` so the result is identical, but explicit intent aids audit.
# Do NOT bump to 0.17 — that version breaks to nom 8.0.
x509-parser = { version = "0.16", default-features = false }
# Phase 7: OpenPGP binary packet-stream parsing. Exact-pin (`=0.19.0`) because
# the supply-chain matrix (MSRV 1.88, RUSTSEC-2023-0071 via rsa 0.9, unconditional
# ed25519-dalek 2.1.1 pull) is version-specific — any upstream change requires
# re-running Phase 7 research. `default-features = false` disables `bzip2`
# (we do not encounter compressed key material — keys are not messages) and
# `asm` (supply-chain prefers pure-Rust). See D-P7-04 + research §"Crate: pgp".
#
# Transitive advisory accepted: RUSTSEC-2023-0071 (Marvin timing attack on rsa 0.9).
# Cipherpost parses PGP for metadata display only — never decrypts/signs with RSA.
# See deny.toml [advisories] ignore entry below.
pgp = { version = "=0.19.0", default-features = false }

# Phase 7 Plan 02: rsa is already pulled transitively by pgp 0.19.0 (see RUSTSEC
# acceptance comment above). preview.rs needs `rsa::traits::PublicKeyParts` in
# scope to read RSA modulus bit-size for the `Key:         RSA-2048` banner
# line. Re-exporting through a direct dep is the cleanest path (no new supply
# chain risk — the version pin matches what pgp resolves to). We do NOT enable
# any rsa feature; default features are fine for the trait-only import.
rsa = { version = "0.9", default-features = false }

[[test]]
name = "mock_transport_roundtrip"
path = "tests/mock_transport_roundtrip.rs"
required-features = ["mock"]

[[test]]
name = "signed_packet_budget"
path = "tests/signed_packet_budget.rs"

[[test]]
name = "outer_record_canonical_form"
path = "tests/outer_record_canonical_form.rs"

[[test]]
name = "phase2_envelope_round_trip"
path = "tests/phase2_envelope_round_trip.rs"

[[test]]
name = "phase2_material_variants_unimplemented"
path = "tests/phase2_material_variants_unimplemented.rs"

[[test]]
name = "phase2_share_uri_parse"
path = "tests/phase2_share_uri_parse.rs"

[[test]]
name = "phase2_self_round_trip"
path = "tests/phase2_self_round_trip.rs"
required-features = ["mock"]

[[test]]
name = "phase2_share_round_trip"
path = "tests/phase2_share_round_trip.rs"
required-features = ["mock"]

[[test]]
name = "phase2_tamper_aborts_before_decrypt"
path = "tests/phase2_tamper_aborts_before_decrypt.rs"
required-features = ["mock"]

[[test]]
name = "phase2_expired_share"
path = "tests/phase2_expired_share.rs"
required-features = ["mock"]

[[test]]
name = "phase2_size_cap"
path = "tests/phase2_size_cap.rs"
required-features = ["mock"]

[[test]]
name = "phase2_idempotent_re_receive"
path = "tests/phase2_idempotent_re_receive.rs"
required-features = ["mock"]

[[test]]
name = "phase2_state_perms"
path = "tests/phase2_state_perms.rs"
required-features = ["mock"]

[[test]]
name = "phase2_cli_version_git_sha"
path = "tests/phase2_cli_version_git_sha.rs"

[[test]]
name = "phase2_cli_help_examples"
path = "tests/phase2_cli_help_examples.rs"

[[test]]
name = "phase2_cli_stderr_no_secrets"
path = "tests/phase2_cli_stderr_no_secrets.rs"

[[test]]
name = "phase2_cli_declined_exit_7"
path = "tests/phase2_cli_declined_exit_7.rs"
required-features = ["mock"]

[[test]]
name = "phase2_cli_not_tty_aborts"
path = "tests/phase2_cli_not_tty_aborts.rs"

[[test]]
name = "phase3_receipt_sign_verify"
path = "tests/phase3_receipt_sign_verify.rs"

[[test]]
name = "phase3_receipt_canonical_form"
path = "tests/phase3_receipt_canonical_form.rs"

[[test]]
name = "phase3_mock_publish_receipt_coexistence"
path = "tests/phase3_mock_publish_receipt_coexistence.rs"
required-features = ["mock"]

[[test]]
name = "phase3_end_to_end_a_sends_b_receipt"
path = "tests/phase3_end_to_end_a_sends_b_receipt.rs"
required-features = ["mock"]

[[test]]
name = "phase3_coexistence_b_self_share_and_receipt"
path = "tests/phase3_coexistence_b_self_share_and_receipt.rs"
required-features = ["mock"]

[[test]]
name = "phase3_share_ref_filter"
path = "tests/phase3_share_ref_filter.rs"
required-features = ["mock"]

[[test]]
name = "phase3_tamper_zero_receipts"
path = "tests/phase3_tamper_zero_receipts.rs"
required-features = ["mock"]

[[test]]
name = "spec_test_vectors"
path = "tests/spec_test_vectors.rs"

# Phase 5 Plan 05-01: exact one-newline strip rule (D-P5-08) exercised via file-branch.
[[test]]
name = "passphrase_strip_rule"
path = "tests/passphrase_strip_rule.rs"

# Phase 5 Plan 05-01: BorrowedFd fd-lifecycle test + fd=0 rejection (D-P5-03/D-P5-07).
[[test]]
name = "passphrase_fd_borrowed"
path = "tests/passphrase_fd_borrowed.rs"

# Phase 5 Plan 05-02: PASS-09 scripted-roundtrip integration test under MockTransport
# (D-P5-09). Requires the `mock` feature; gates the CI guarantee that scripted
# send→receive works end-to-end with no TTY, via --passphrase-file and --passphrase-fd.
[[test]]
name = "pass09_scripted_roundtrip"
path = "tests/pass09_scripted_roundtrip.rs"
required-features = ["mock"]

# Phase 6 Plan 04: X509 Envelope JCS fixture byte-identity.
[[test]]
name = "material_x509_envelope_round_trip"
path = "tests/material_x509_envelope_round_trip.rs"

# Phase 6 Plan 04: X509 ingest pipeline coverage (positive + negative paths + oracle hygiene).
[[test]]
name = "material_x509_ingest"
path = "tests/material_x509_ingest.rs"

# Phase 6 Plan 04: X509 self-mode round-trip under MockTransport (X509-09).
[[test]]
name = "x509_roundtrip"
path = "tests/x509_roundtrip.rs"
required-features = ["mock"]

# Phase 6 Plan 04: X509 banner render golden-string test.
[[test]]
name = "x509_banner_render"
path = "tests/x509_banner_render.rs"

# Phase 6 Plan 04: Error-oracle hygiene for Error::InvalidMaterial (X509-08).
[[test]]
name = "x509_error_oracle"
path = "tests/x509_error_oracle.rs"

# Phase 6 Plan 04: CI-visible dep-tree guard — ring/aws-lc must NEVER appear.
[[test]]
name = "x509_dep_tree_guard"
path = "tests/x509_dep_tree_guard.rs"

[dev-dependencies]
tempfile = "3"
proptest = "1"
# Plan 02 Task 2's tests/identity_passphrase_argv_rejected.rs uses these to spawn
# the compiled binary and assert exit code + stderr substring. Declared here (not in
# Plan 02) because Cargo.toml is owned by Plan 01. Both crates are MIT/Apache-2.0 —
# allowed by deny.toml's license allowlist.
assert_cmd = "2"
predicates = "3"
# Serializes tests that mutate the CIPHERPOST_HOME env var (integration tests in
# identity_perms_0600.rs, identity_phc_header.rs, debug_leak_scan.rs). Rust's
# default parallel test runner races on process-global env; #[serial] forces
# these tests to run one at a time within their crate.
serial_test = "3"
# Phase 5 Plan 05-01: fd-lifecycle test (tests/passphrase_fd_borrowed.rs) uses
# libc::pipe / libc::write / libc::close / libc::fcntl directly to build a pipe,
# pass its read-end fd through resolve_passphrase, and then assert fcntl(fd,
# F_GETFD) != -1 after the call (proves BorrowedFd did not close the caller's
# fd — Pitfall #31). MIT/Apache-2.0.
libc = "0.2"

[profile.release]
panic = "abort"      # prevents panic backtrace from leaking stack contents (Security Mistakes table, PITFALLS.md)
lto = "thin"
codegen-units = 1
